@@ -17,6 +17,7 @@ package org.openrewrite.groovy.tree;
 
 import org.junit.jupiter.api.Test;
 import org.openrewrite.Issue;
+import org.openrewrite.groovy.GroovyParser;
 import org.openrewrite.java.JavaIsoVisitor;
 import org.openrewrite.java.tree.J;
 import org.openrewrite.java.tree.JavaType;
@@ -27,11 +28,15 @@ import java.util.Objects;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.openrewrite.groovy.Assertions.groovy;
 
+@SuppressWarnings({"GrUnnecessaryDefModifier", "GrMethodMayBeStatic"})
 class MethodDeclarationTest implements RewriteTest {
 
     @Test
     void methodDeclarationDeclaringType() {
         rewriteRun(
+          // Avoid type information in the usual groovy parser type cache leaking and affecting this test
+          // In the real world you don't parse a bunch of classes all named "A" all at once
+          spec -> spec.parser(GroovyParser.builder()),
           groovy(
             """
               class A {
@@ -39,7 +44,7 @@ class MethodDeclarationTest implements RewriteTest {
               }
               """,
             spec -> spec.beforeRecipe(cu -> {
-                var method = (J.MethodDeclaration) cu.getClasses().get(0).getBody().getStatements().get(0);
+                var method = (J.MethodDeclaration) cu.getClasses().getFirst().getBody().getStatements().getFirst();
                 JavaType.Method methodType = method.getMethodType();
                 assertThat(methodType).isNotNull();
                 assertThat(methodType.getName()).isEqualTo("method");
@@ -79,21 +84,34 @@ class MethodDeclarationTest implements RewriteTest {
     }
 
     @Test
-    void emptyArguments() {
+    void genericTypeParameterReturn() {
         rewriteRun(
-          groovy("def foo( ) {}")
+          groovy(
+            """
+              interface Foo {
+                  <T extends Task> T task(Class<T> type)
+              }
+              """
+          )
         );
     }
 
     @Test
-    void methodThrows() {
+    void modifiersReturn() {
         rewriteRun(
           groovy(
             """
-              def foo(int a) throws Exception , RuntimeException {
+              public final accept(Map m) {
               }
               """
           )
+        );
+    }
+
+    @Test
+    void emptyArguments() {
+        rewriteRun(
+          groovy("def foo( ) {}")
         );
     }
 
@@ -110,11 +128,48 @@ class MethodDeclarationTest implements RewriteTest {
     }
 
     @Test
+    void varargsArguments() {
+        rewriteRun(
+          groovy(
+            """
+              def foo(String... messages) {
+                  println(messages[0])
+              }
+              """
+          )
+        );
+    }
+
+    @Test
     void defaultArgumentValues() {
         rewriteRun(
           groovy(
             """
               def confirmNextStepWithCredentials(String message /* = prefix */ = /* hello prefix */ "Hello" ) {
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    void modifiersArguments() {
+        rewriteRun(
+          groovy(
+            """
+              def accept(final def Map m) {
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    void methodThrows() {
+        rewriteRun(
+          groovy(
+            """
+              def foo(int a) throws Exception , RuntimeException {
               }
               """
           )
@@ -139,16 +194,17 @@ class MethodDeclarationTest implements RewriteTest {
           groovy(
             """
               def foo(String[][] s) {}
-              """, spec -> spec.afterRecipe(cu -> new JavaIsoVisitor<>() {
-                @Override
-                public J.ArrayType visitArrayType(J.ArrayType arrayType, Object o) {
-                    if (arrayType.getElementType() instanceof J.ArrayType) {
-                        assertThat(Objects.requireNonNull(arrayType.getElementType().getType()).toString()).isEqualTo("java.lang.String[]");
-                        assertThat(Objects.requireNonNull(arrayType.getType()).toString()).isEqualTo("java.lang.String[][]");
+              """,
+                spec -> spec.afterRecipe(cu -> new JavaIsoVisitor<>() {
+                    @Override
+                    public J.ArrayType visitArrayType(J.ArrayType arrayType, Object o) {
+                        if (arrayType.getElementType() instanceof J.ArrayType) {
+                            assertThat(Objects.requireNonNull(arrayType.getElementType().getType()).toString()).isEqualTo("java.lang.String[]");
+                            assertThat(Objects.requireNonNull(arrayType.getType()).toString()).isEqualTo("java.lang.String[][]");
+                        }
+                        return super.visitArrayType(arrayType, o);
                     }
-                    return super.visitArrayType(arrayType, o);
-                }
-            }.visit(cu, 0))
+                }.visit(cu, 0))
           )
         );
     }
@@ -175,6 +231,57 @@ class MethodDeclarationTest implements RewriteTest {
               def 'some test scenario description'() {}
               'some test scenario description'()
               """
+          )
+        );
+    }
+
+    @Issue("https://github.com/openrewrite/rewrite/issues/4705")
+    @Test
+    void functionWithDefAndExplicitReturnType() {
+        rewriteRun(
+          groovy(
+            """
+              class B {
+                  def /*int*/ int one() { 1 }
+                  @Foo def /*Object*/ Object two() { 2 }
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    void parameterWithConflictingTypeName() {
+        rewriteRun(
+          groovy(
+            """
+              class variable {}
+              def accept(final def variable m) {}
+              """,
+            spec -> spec.afterRecipe(cu -> {
+                J.MethodDeclaration accept = (J.MethodDeclaration) cu.getStatements().get(1);
+                J.VariableDeclarations m = (J.VariableDeclarations) accept.getParameters().getFirst();
+                assertThat(m.getModifiers()).satisfiesExactly(
+                  mod -> assertThat(mod.getType()).isEqualTo(J.Modifier.Type.Final),
+                  mod -> assertThat(mod.getKeyword()).isEqualTo("def")
+                );
+            })
+          )
+        );
+    }
+
+    @Test
+    void defIsNotReturnType() {
+        rewriteRun(
+          groovy(
+            """
+              final def accept(final def Object m) {
+              }
+              """,
+            spec -> spec.afterRecipe(cu -> {
+                J.MethodDeclaration accept = (J.MethodDeclaration) cu.getStatements().getFirst();
+                assertThat(accept.getReturnTypeExpression()).isNull();
+            })
           )
         );
     }
