@@ -42,7 +42,7 @@ class JavaTemplateTest7Test implements RewriteTest {
               @Override
               public J visitMethodInvocation(J.MethodInvocation method, ExecutionContext p) {
                   if (matcher.matches(method)) {
-                      return JavaTemplate.apply("new Integer(#{any()})", getCursor(), method.getCoordinates().replace(), method.getArguments().get(0));
+                      return JavaTemplate.apply("new Integer(#{any()})", getCursor(), method.getCoordinates().replace(), method.getArguments().getFirst());
                   }
                   return super.visitMethodInvocation(method, p);
               }
@@ -83,7 +83,6 @@ class JavaTemplateTest7Test implements RewriteTest {
                             }
                             """
                         )
-                        .contextSensitive()
                         .build()
                         .apply(getCursor(), cd.getBody().getCoordinates().firstStatement());
                   }
@@ -155,7 +154,6 @@ class JavaTemplateTest7Test implements RewriteTest {
               final MethodMatcher GET_BYTES = new MethodMatcher("java.lang.String getBytes()");
               final JavaTemplate WITH_ENCODING = JavaTemplate
                 .builder("getBytes(StandardCharsets.#{})")
-                .contextSensitive()
                 .imports("java.nio.charset.StandardCharsets")
                 .build();
 
